--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "a wrapper around the kotlin javascript compiler",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch:test": "mocha -w"
   },
   "keywords": [
     "kotlin",
@@ -18,7 +19,9 @@
   "author": "Michael Johansen",
   "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "glob": "^7.0.3",
+    "mkdirp": "^0.5.1",
     "q": "^1.4.1"
   },
   "devDependencies": {
